# BigWorkC

./: CMakeLists.txt  Makefile.win  README.md  Tetris.dev  Tetris.layout  main.c
Tetris/: Tetris.sln  Tetris.vcxproj  Tetris.vcxproj.filters  mem.h
Tetris/Debug/: Tetris.ilk  vc141.idb
Tetris/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Utils/: DrawUtils.c  DrawUtils.h  GameUtils.c  GameUtils.h  JudgeUtils.c  JudgeUtils.h  ListUtils.c  ListUtils.h  SaveUtils.c  SaveUtils.h
include/: graphics.h
libgraphics/: exceptio.c  genlib.c  graphics.c  readme.txt  simpio.c  strlib.c
simpleGUI/: imgui.c
